# Kimera_SWM-Codex

./: .cursorrules  .editorconfig  .env.dev  .env.postgresql  .env.template  .gitattributes  .gitignore  .roomodes  100_PERCENT_ACHIEVEMENT_REPORT.md  AUDIT_FIXES_TEST_REPORT.md  CHANGELOG.md  COINBASE_API_KEY_GUIDE.md  CONTRIBUTING.md  CURSOR_MCP_FIX_SUMMARY.md  Dockerfile  ENGINE_INTEGRATION_ANALYSIS.md  FINAL_ENDPOINT_FIXES_REPORT.md  FINAL_MCP_SUCCESS_REPORT.json  FINAL_TASK_SUMMARY.md  FULL_SYSTEM_100_PERCENT_REPORT.md  KIMERA_COMPLETE_SCIENTIFIC_ANALYSIS.md  KIMERA_COMPREHENSIVE_SYSTEM_AUDIT_REPORT.md  KIMERA_FINAL_COMPLETION_STATUS.md  KIMERA_FINAL_STATUS_REPORT.md  KIMERA_IMPLEMENTATION_GUIDE.md  KIMERA_LIVE_CDP_INTEGRATION_SUMMARY.md  KIMERA_LIVE_TRADING_DEPLOYMENT_GUIDE.md  KIMERA_PERFORMANCE_TEST_SUMMARY.md  KIMERA_PRACTICAL_ANALYSIS_AND_FIXES.md  KIMERA_QUICKFIX_GUIDE.md  KIMERA_SWM_Integration_Roadmap.md  KIMERA_TRADING_INTEGRATION_SUMMARY.md  KIMERA_TRADING_SYSTEM_FIXES.md  KIMERA_WINDOWS_DEPLOYMENT_GUIDE.md  OMNIDIMENSIONAL_PROTOCOL_GUIDE.md  PHASE1_WEEK1_IMPLEMENTATION_REPORT.md  PHASE2_WEEK4_COMPLETION_REPORT.md  PHASE2_WEEK5_COMPLETION_REPORT.md  PHASE2_WEEK6-7_COMPLETION_REPORT.md  PHASE3_WEEK8_COMPLETION_REPORT.md  (+240 more)
.cursor/: cline_mcp_settings.json  mcp.json  mcp_backup.json  mcp_batch.json
Comprehensive AI Benchmarks, Testing Standards, and Certification Framework Analysis/: ai_benchmarks_comprehensive.csv  ai_certification_programs_2025.csv  ai_domain_specific_benchmarks.csv  ai_institutional_standards.csv  ai_model_performance_2025.csv  script (1).py  script.py
aip/: cdp_api_key.json
archive/: ARCHIVE_SUMMARY.md  BACKGROUND_SERVICES_FIX_SUMMARY.md  KIMERA_AUDIT_SUMMARY.md  KIMERA_SWM_RUNNING_STATUS.md  KIMERA_Trading_Module_Refactoring_Roadmap.md  ROADMAP_PHASE1_COMPLETION_REPORT.md  TASK_COMPLETION_REPORT.md  fix_engine_indentation.py  run_tests.py  system_audit.py
archive/backup_config_unification_20250804_105613/configs/: gpu_config.json  pyproject.toml
archive/backup_config_unification_20250804_105613/configs/database/: database_config.txt  neo4j_config.json  redis_config.json
archive/kimera_trading_final_cleanup_20250804_114857/: main.py  pyproject.toml
archive/kimera_trading_final_cleanup_20250804_114857/config/: quantum.yaml
archive/kimera_trading_final_cleanup_20250804_114857/scripts/: deploy.py
archive/kimera_trading_final_cleanup_20250804_114857/src/kimera_trading/cognitive/: living_neutrality.py  revolutionary.py
archive/kimera_trading_final_cleanup_20250804_114857/src/kimera_trading/core/: interfaces.py
archive/kimera_trading_final_cleanup_20250804_114857/src/kimera_trading/data/: market.py
archive/kimera_trading_final_cleanup_20250804_114857/src/kimera_trading/execution/: conscious_router.py  schrodinger_orders.py
archive/kimera_trading_final_cleanup_20250804_114857/src/kimera_trading/monitoring/: cognitive_alerts.py  thermodynamic_dash.py
archive/kimera_trading_final_cleanup_20250804_114857/src/kimera_trading/risk/: cognitive_var.py
archive/kimera_trading_final_cleanup_20250804_114857/src/kimera_trading/thermodynamic/: energy_flow.py
archive/kimera_trading_final_cleanup_20250804_114857/tests/cognitive/: test_linguistic_market.py
archive/kimera_trading_final_cleanup_20250804_114857/tests/quantum/: test_superposition.py
archive/kimera_trading_final_cleanup_20250804_114857/tests/thermodynamic/: test_energy_flow.py
backend/: main.py
config/: README.md  ai_test_suite_config.json  development.yaml  kimera_cdp_live.env  kimera_max_profit_config.env  production.yaml  redis_sample.env  tcse_config.yaml
config_unified/: config_loader.py
configs/: initialization_config.json  pyproject.toml  system_config.json
dashboard/: understanding_monitor.py
data/: autonomous_kimera_scientific_state.json  trading_state.json  vault_genesis_KIMERA_PRODUCTION_VAULT_SECURE.secure  vault_genesis_KIMERA_VAULT_fcb9d33b.secure  vault_genesis_TEST_INTEGRATION_VAULT.secure  vault_genesis_TEST_SECURITY_VAULT.secure
docs/: ACTUAL_SYSTEM_STATUS_REPORT.md  AI_TRADING_SYSTEM_ROADMAP.md  ARCHITECTURE.md  BINANCE_API_SETUP_GUIDE.md  COMPREHENSIVE_FIXES_COMPLETION_REPORT.md  COMPREHENSIVE_VERIFICATION_REPORT.md  CREDENTIALS_CONFIGURATION_GUIDE.md  CRITICAL_UPDATES_COMPLETED.md  CUDA_QUANTUM_INTEGRATION.md  DEPLOYMENT_COMPLETE.md  DIRECTORY_ANALYSIS_COMPLETE.md  DOCUMENTATION_INTEGRATION_SUCCESS.md  DOCUMENTATION_TRANSFORMATION_SUMMARY.md  DOCUMENTATION_UPDATE_ACTION_PLAN.md  ENGINE_INTERFACE_DOCUMENTATION.md  ENTERPRISE_TRADING_ARCHITECTURE.md  ENTERPRISE_TRADING_SUMMARY.md  EVOLUTION_ANALYSIS_REPORT.md  FINAL_100_PERCENT_REPORT.md  FINAL_MCP_INSTALLATION_GUIDE.md  HYBRID_MODE_GUIDE.md  INSTALLATION.md  KIMERA_AEROSPACE_GRADE_IMPLEMENTATION_REPORT.md  KIMERA_CDP_AGENTKIT_INTEGRATION_SUMMARY.md  KIMERA_COMPLETE_IMPLEMENTATION_REPORT.md  KIMERA_CRITICAL_REMEDIATION_ROADMAP.md  KIMERA_MCP_EXPANSION_SUMMARY.md  KIMERA_MODULE_VERIFICATION_REPORT.md  KIMERA_STATUS_REPORT_2025.md  KIMERA_TECHNICAL_SPECIFICATIONS.md  KIMERA_VAULT_TRADING_SUCCESS_REPORT.md  MCP_SETUP_GUIDE.md  NEW_README.md  PERFORMANCE_TEST_README.md  PERFORMANCE_VALIDATION_REPORT.md  PHARMACEUTICAL_ADVANCED_FEATURES_SUMMARY.md  PHASE2_ARCHITECTURE_REFACTORING_IMPLEMENTATION.md  PHASE2_WEEK4_COMPLETION_REPORT.md  PHASE4_WEEKS12-13_COMPLETION_REPORT.md  PRODUCTION_OPTIMIZATION_INTEGRATION.md  (+19 more)
innovations/: quantum_batch_processor.py
kimera_trading/: README.md
prompts/: codebase_cleanup.md  performance_optimization.md  (+1 more)
src/: main.py  (+8 more)
(+3716 files in other folders)
