[tool.poetry]
name = "kimera"
version = "0.1.0"
description = "KIMERA System"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.11"
pydantic-settings = "^2.1.0"
redis = "^5.0.1"
sqlalchemy = "^2.0.25"
aiosqlite = "^0.19.0"
psycopg2-binary = "^2.9.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
prometheus-client = "^0.19.0"
opentelemetry-sdk = "^1.22.0"
opentelemetry-instrumentation-fastapi = "^0.43b0"
opentelemetry-instrumentation-sqlalchemy = "^0.43b0"
opentelemetry-instrumentation-httpx = "^0.43b0"
opentelemetry-exporter-otlp-proto-grpc = "^1.22.0"
python-json-logger = "^2.0.7"
structlog = "^23.2.0"
locust = "^2.21.0"
pympler = "^1.0.1"
pytest-benchmark = "^4.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
