[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "kimera-swm"
version = "0.1.0"
description = "KIMERA SWM - Advanced Symbolic Wave Memory System"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Kimera SWM Team", email = "team@kimera-swm.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Core Web Framework
    "fastapi>=0.115.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.8.0",
    
    # Scientific Computing  
    "torch>=2.5.0",
    "numpy>=2.0.0",
    "scipy>=1.15.0",
    "sympy>=1.13.0",
    "scikit-learn>=1.7.0",
    
    # Quantum Computing
    "qiskit>=1.0.0",
    "qiskit-aer>=0.15.0",
    
    # Database & Storage
    "sqlalchemy>=2.0.30",
    "redis>=5.0.0",
    "neo4j>=5.28.0",
    
    # Security (Updated)
    "requests>=2.32.4",
    "urllib3>=2.5.0",
    "certifi>=2025.7.14",
    "pillow>=11.3.0",
    
    # Configuration
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    
    # Monitoring
    "loguru>=0.7.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
gpu = [
    "cupy-cuda12x>=13.0.0",
    "gputil>=1.4.0",
]

[project.urls]
Homepage = "https://github.com/kimera-swm/kimera-swm"
Documentation = "https://docs.kimera-swm.com"
Repository = "https://github.com/kimera-swm/kimera-swm"

[project.scripts]
kimera = "src.main:main"
kimera-setup = "scripts.utils.setup_independent_environment:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E501"]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true