[tool.poetry]
name = "kimera-trading"
version = "0.1.0"
description = "Cognitive-Thermodynamic Trading System for KIMERA"
authors = ["KIMERA SWM Autonomous Architect"]

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "^1.23.5"
scipy = "^1.10.0"
networkx = "^3.0"
qiskit = "^0.41.0"
nltk = "^3.8.1"
spacy = "^3.5.0"
torch = "^1.13.1"
scikit-learn = "^1.2.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
