[tool.poetry]
name = "kimera"
version = "0.1.0"
description = "KIMERA System"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.11"
pydantic-settings = "^2.1.0"
redis = "^5.0.1"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.30.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
prometheus-client = "^0.19.0"
opentelemetry-sdk = "^1.22.0"
opentelemetry-instrumentation-fastapi = "^0.43b0"
opentelemetry-instrumentation-sqlalchemy = "^0.43b0"
opentelemetry-instrumentation-httpx = "^0.43b0"
opentelemetry-exporter-otlp-proto-grpc = "^1.22.0"
python-json-logger = "^2.0.7"
structlog = "^23.2.0"
locust = "^2.21.0"
pympler = "^1.0.1"
pytest-benchmark = "^4.0.0"
torch = "^2.7.0"
torchvision = "^0.22.0"
numpy = "^2.0.0"
cupy-cuda12x = "^13.5.1"
prometheus-fastapi-instrumentator = "^7.1.0"
loguru = "^0.7.3"
scikit-learn = "^1.7.1"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
neo4j = "^5.28.1"
gputil = "^1.4.0"
memory-profiler = "^0.61.0"
pyyaml = "^6.0.2"
pgvector = "^0.4.1"
python-multipart = "^0.0.20"
transformers = "^4.54.1"
flagembedding = "^1.3.5"
onnxruntime = "^1.22.1"
optimum = "^1.26.1"
qiskit = "^2.1.1"
qiskit-aer = "^0.17.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
